# learning_en_bot

./: .env.example  .gitignore  main.py  pyproject.toml
src/: config.py
src/learning_en_bot/: database.py  fsm_states.py  main.py  reminders.py  scheduler.py  settings.py
src/learning_en_bot/buttons/: keyboards.py
src/learning_en_bot/handlers/: __init__.py
