[project]
name = "learning-en-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4.1",
    "apscheduler>=3.10.4",
    "loguru>=0.7.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.0",
]
